Bug 1594054 - Move ExecutableAllocator from JitRuntime to JitZone. r=jonco,erahm

This matches the JitCode GC-thing lifetime and will hopefully help avoid
fragmentation.

Differential Revision: https://phabricator.services.mozilla.com/D52823