js/src/vm/Realm.cpp
@@ -116,14 +116,9 @@ bool JSRuntime::createJitRuntime(JSContext* cx) {
   MOZ_ASSERT(!jitRuntime_);
 
   if (!CanLikelyAllocateMoreExecutableMemory()) {
-    // Report OOM instead of potentially hitting the MOZ_CRASH below, but first
-    // try to release memory.
+    // Try to release memory first instead of potentially reporting OOM below.
     if (OnLargeAllocationFailure) {
       OnLargeAllocationFailure();
-    }
-    if (!CanLikelyAllocateMoreExecutableMemory()) {
-      ReportOutOfMemory(cx);
-      return false;
     }
   }
 
@@ -136,12 +131,10 @@ bool JSRuntime::createJitRuntime(JSContext* cx) {
   // we can't just wait to assign jitRuntime_.
   jitRuntime_ = jrt;
 
-  AutoEnterOOMUnsafeRegion noOOM;
   if (!jitRuntime_->initialize(cx)) {
-    // Handling OOM here is complicated: if we delete jitRuntime_ now, we
-    // will destroy the ExecutableAllocator, even though there may still be
-    // JitCode instances holding references to ExecutablePools.
-    noOOM.crash("OOM in createJitRuntime");
+    js_delete(jitRuntime_.ref());
+    jitRuntime_ = nullptr;
+    return false;
   }
 
   return true;
